--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 				<div class="col-sm-4">
 					<div class="card">
 						<img src="img/img1.png" class="thumbnail">
-						<h4>PROJECT 1</h4>
-						<p>Some description, skfaof dfgkdnsg sjfnfgnier iegjergeioerjg isdfsdoifs fsdkfnso fsdfs fsdfsdf fsdfsdfskifjsdof fsdlf </p>
+						<h4>Face Detector</h4>
+						<p>A React-Redux Face Detection app that detects human faces on image links using Node Express backend for the API, hosted on Heroku with JSON Web Token Authentication and PostgreSQL database</p>
 					</div>
 				</div>
 				
@@ -104,7 +104,7 @@
 					<div class="card">
 						<img src="img/img2.png" class="thumbnail">
 						<h4>PROJECT 2</h4>
-						<p>Some description, skfaof dfgkdnsg sjfnfgnier iegjergeioerjg </p>
+						<p>An e-commerce store similar to Amazon/Ebay built with React-Redux. Customers can filter products by custom search or by categories while also being able to add items to cart and checkout </p>
 					</div>
 				</div>
 
