updated cards and stack

--- a/index.html
+++ b/index.html
@@ -83,25 +83,89 @@
 				<h2>Projects</h2>
 			</div>
 		</div>
-
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="card">
-						<a href="https://face-detector-frontend.herokuapp.com/">
-							<img src="img/img1.png" class="thumbnail">
-						</a>
-						<h4>Face Detector</h4>
-						<p>A React-Redux Face Detection app that detects human faces on image links using Node Express backend for the API, hosted on Heroku with JSON Web Token Authentication and PostgreSQL database</p>
+						<div class="card-thumbnail">
+							<a href="https://face-detector-frontend.herokuapp.com/">
+								<img src="img/img1.png" class="thumbnail">
+							</a>
+						</div>
+						<div class="card-title">
+							<h4>Face Detector</h4>
+						</div>
+						<div class="card-tags">
+								<span class="label">
+										<i class="devicon devicon-react-original colored"></i>
+										React
+								</span>
+								<span class="label">
+										<i class="devicon devicon-nodejs-plain colored"></i>
+										Nodejs
+								</span>
+								<span class="label">
+										<i class="devicon-postgresql-plain-wordmark colored"></i>
+										PostgreSQL
+								</span>
+							</div>
+						<hr>
+						<div class="card-desc">
+							<p>A React-Redux Face Detection app that detects human faces on image links using Node Express backend for the API, hosted on Heroku with JSON Web Token Authentication and PostgreSQL database</p>
+						</div>
+						<hr>
+						<div class="card-links">
+							<a href="https://phone-shop-frontend.herokuapp.com/">
+								<button class="button" value="Source" type="button">
+									<i class="fas fa-mouse-pointer"></i> Demo
+								</button>
+							</a>
+							<a href="https://github.com/kayqq/face-detector">
+								<button class="button" value="Source" type="button">
+									<i class="fab fa-github" aria-hidden="true"></i> Src Frontend
+								</button>
+							</a>
+							<a href="https://github.com/kayqq/face-detector-api">
+								<button class="button" value="Source" type="button">
+									<i class="fab fa-github" aria-hidden="true"></i> Src Backend
+								</button>
+							</a>
+						</div>
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="card">
-						<a href="https://phone-shop-frontend.herokuapp.com/">
-							<img src="img/img2.png" class="thumbnail">
-						</a>
-						<h4>Phone Shop</h4>
-						<p>An e-commerce store similar to Amazon/Ebay built with React-Redux. Customers can filter products by custom search or by categories while also being able to add items to cart and checkout </p>
+						<div class="card-thumbnail">
+							<a href="https://phone-shop-frontend.herokuapp.com/">
+								<img src="img/img2.png" class="thumbnail">
+							</a>
+						</div>
+						<div class="card-title">
+							<h4>Phone Shop</h4>
+						</div>
+						<div class="card-tags">
+								<span class="label">
+										<i class="devicon devicon-react-original colored"></i>
+										React
+								</span>
+							</div>
+						<hr>
+						<div class="card-desc">
+							<p>An e-commerce store similar to Amazon/Ebay built with React-Redux. Customers can filter products by custom search or by categories while also being able to add items to cart and checkout </p>
+						</div>
+						<hr>
+						<div class="card-links">
+							<a href="https://phone-shop-frontend.herokuapp.com/">
+								<button class="button" value="Demo" type="button">
+									<i class="fas fa-mouse-pointer"></i> Demo
+								</button>
+							</a>
+							<a href="https://github.com/kayqq/phone-shop">
+								<button class="button" value="Source" type="button">
+									<i class="fab fa-github" aria-hidden="true"></i> Source
+								</button>
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -123,18 +187,24 @@
 		<div class="container">
 			<div class="row">
 				<div class="stackPadding">
-				<i class="devicon devicon-html5-plain-wordmark colored"></i>
-				<i class="devicon devicon-css3-plain-wordmark colored"></i>
-				<i class="devicon devicon-javascript-plain colored"></i>
-				<i class="devicon devicon-jquery-plain-wordmark colored"></i>
-				<i class="devicon devicon-bootstrap-plain-wordmark colored"></i>
-				<i class="devicon devicon-php-plain colored"></i>
-				<i class="devicon devicon-java-plain-wordmark colored"></i>
-				<i class="devicon devicon-react-original-wordmark colored"></i>
-				<i class="devicon devicon-nodejs-plain-wordmark colored"></i>
-				<i class="devicon devicon-mysql-plain-wordmark colored"></i>
-				<i class="devicon devicon-git-plain-wordmark colored"></i>
-				<i class="devicon devicon-visualstudio-plain-wordmark colored"></i>
+					<div class="devicon">
+						<i class="devicon-javascript-plain colored"></i>
+						<i class="devicon-react-original-wordmark colored"></i>
+						<i class="devicon-nodejs-plain-wordmark colored"></i>
+						<i class="devicon-postgresql-plain-wordmark colored"></i>
+					</div>
+					<div class="devicon-secondary">
+						<i class="devicon-html5-plain-wordmark colored"></i>
+						<i class="devicon-css3-plain-wordmark colored"></i>
+						<i class="devicon-jquery-plain-wordmark colored"></i>
+						<i class="devicon-bootstrap-plain-wordmark colored"></i>
+						<i class="devicon-php-plain colored"></i>
+						<i class="devicon-java-plain-wordmark colored"></i>
+						<i class="devicon-mysql-plain-wordmark colored"></i>
+						<i class="devicon-git-plain-wordmark colored"></i>
+						<i class="devicon-visualstudio-plain-wordmark colored"></i>
+					</div>
+					
 				</div>
 			</div>
 		</div>
