updated links & layout

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-4">
+				<div class="col-sm-6">
 					<div class="card">
 						<div class="card-thumbnail">
 							<a href="https://face-detector-frontend.herokuapp.com/">
@@ -115,7 +115,7 @@
 						</div>
 						<hr>
 						<div class="card-links">
-							<a href="https://phone-shop-frontend.herokuapp.com/">
+							<a href="https://face-detector-frontend.herokuapp.com/">
 								<button class="button" value="Source" type="button">
 									<i class="fas fa-mouse-pointer"></i> Demo
 								</button>
@@ -133,7 +133,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-sm-6">
 					<div class="card">
 						<div class="card-thumbnail">
 							<a href="https://phone-shop-frontend.herokuapp.com/">
