--- a/index.html
+++ b/index.html
@@ -2,230 +2,316 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
     <title>Kenny Quan</title>
 
     <!-- Bootstrap CSS (must come before all other CSS sheets) -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-		
-	<!-- Devicon CSS -->
-	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+      integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+      crossorigin="anonymous"
+    />
+
+    <!-- Devicon CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css"
+    />
 
     <!-- Local Theme CSS -->
-    <link href="css/style.css" rel="stylesheet">
-
+    <link href="css/style.css" rel="stylesheet" />
   </head>
-  
+
   <body>
+    <header></header>
 
-	<header>
-  	</header>
+    <!-- FRONT PAGE -->
+    <section id="hero" class="hero">
+      <!-- Profile Picture -->
+      <div class="container">
+        <div class="row">
+          <img class="img-responsive" src="img/Kenny BW 256.png" />
+        </div>
+      </div>
 
-	<!-- FRONT PAGE -->
-	<section id="hero" class="hero">
-		
-		<!-- Profile Picture -->
-		<div class="container">
-			<div class="row">
-				<img class="img-responsive" src="img/Kenny BW 256.png">
-			</div>			
-		</div>
+      <!-- Name & Title -->
+      <div class="container">
+        <div class="row">
+          <h1>Kenny Quan</h1>
+          <h3>Web Developer</h3>
+        </div>
+      </div>
 
-		<!-- Name & Title -->
-		<div class="container">
-			<div class="row">
-				<h1>Kenny Quan</h1>
-				<h3>Web Developer</h3>
-			</div>
-		</div>
+      <!-- Contacts & Links -->
+      <div class="container">
+        <div class="row">
+          <h5>
+            <ul class="icons">
+              <li class="icons-list__item">
+                <a
+                  href="#projects"
+                  rel="nofollow"
+                  target="_blank"
+                  title="My portfolio."
+                >
+                  <i class="fas fa-briefcase grow" aria-hidden="true"></i>
+                  Projects
+                </a>
+              </li>
+              <li class="icons-list__item">
+                <a
+                  href="mailto:quan_kenny@yahoo.com"
+                  rel="nofollow"
+                  target="_blank"
+                  title="Send me an email"
+                >
+                  <i class="fa fa-envelope grow" aria-hidden="true"></i> Email
+                </a>
+              </li>
+              <li class="icons-list__item">
+                <a
+                  href="https://github.com/kayqq/"
+                  rel="nofollow"
+                  target="_blank"
+                  title="Look through my Github profile"
+                >
+                  <i class="fab fa-github grow" aria-hidden="true"></i> Github
+                </a>
+              </li>
+              <li class="icons-list__item">
+                <a
+                  href="https://www.linkedin.com/in/kennyquan/"
+                  rel="nofollow"
+                  target="_blank"
+                  title="See my LinkedIn profile"
+                >
+                  <i class="fab fa-linkedin grow" aria-hidden="true"></i>
+                  LinkedIn
+                </a>
+              </li>
+            </ul>
+          </h5>
+        </div>
+      </div>
+    </section>
 
-		<!-- Contacts & Links -->
-		<div class="container">
-			<div class="row">
-			<h5>
-				<ul class="icons">
-					<li class="icons-list__item">
-						<a href="#projects" rel="nofollow" target="_blank" title="My portfolio.">
-						<i class="fas fa-briefcase grow" aria-hidden="true"></i> Projects
-						</a>
-					</li>
-					<li class="icons-list__item">
-						<a href="mailto:quan_kenny@yahoo.com" rel="nofollow" target="_blank" title="Send me an email">
-						<i class="fa fa-envelope grow" aria-hidden="true"></i> Email
-						</a>
-					</li>
-					<li class="icons-list__item">
-						<a href="https://github.com/kayqq/" rel="nofollow" target="_blank"  title="Look through my Github profile">
-							<i class="fab fa-github grow" aria-hidden="true"></i> Github
-						</a>
-					</li>
-					<li class="icons-list__item">
-						<a href="https://www.linkedin.com/in/kennyquan/" rel="nofollow" target="_blank"  title="See my LinkedIn profile">
-							<i class="fab fa-linkedin grow" aria-hidden="true"></i> LinkedIn
-						</a>
-					</li>
-				</ul>
-			</h5>
-			</div>
-		</div>
+    <!-- PROJECTS -->
+    <section id="projects" class="projects">
+      <!-- Section Title -->
+      <div class="container">
+        <div class="row projects-centered"><h2>Projects</h2></div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <!-- CARD 1 -->
+          <div class="col-sm-6">
+            <div class="card">
+              <div class="card-thumbnail">
+                <a href="https://face-detector-frontend.herokuapp.com/">
+                  <img src="img/img1.png" class="thumbnail" />
+                </a>
+              </div>
+              <div class="card-title"><h4>Face Detector</h4></div>
+              <div class="card-tags">
+                <span class="label">
+                  <i class="devicon devicon-react-original colored"></i> React
+                </span>
+                <span class="label">
+                  <i class="devicon devicon-nodejs-plain colored"></i> Nodejs
+                </span>
+                <span class="label">
+                  <i class="devicon-postgresql-plain-wordmark colored"></i>
+                  PostgreSQL
+                </span>
+              </div>
+              <hr />
+              <div class="card-desc">
+                <p>
+                  A React-Redux Face Detection app that detects human faces on
+                  image links using Node Express backend for the API, hosted on
+                  Heroku with JSON Web Token Authentication and PostgreSQL
+                  database
+                </p>
+              </div>
+              <hr />
+              <div class="card-links">
+                <a href="https://face-detector-frontend.herokuapp.com/">
+                  <button class="button" value="Source" type="button">
+                    <i class="fas fa-mouse-pointer"></i> Demo
+                  </button>
+                </a>
+                <a href="https://github.com/kayqq/face-detector">
+                  <button class="button" value="Source" type="button">
+                    <i class="fab fa-github" aria-hidden="true"></i> Src
+                    Frontend
+                  </button>
+                </a>
+                <a href="https://github.com/kayqq/face-detector-api">
+                  <button class="button" value="Source" type="button">
+                    <i class="fab fa-github" aria-hidden="true"></i> Src Backend
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
 
-	</section>
+          <!-- CARD 2 -->
+          <div class="col-sm-6">
+            <div class="card">
+              <div class="card-thumbnail">
+                <a
+                  href="http://piccup-client.s3-website-us-west-1.amazonaws.com/"
+                >
+                  <img src="img/img2.png" class="thumbnail" />
+                </a>
+              </div>
+              <div class="card-title"><h4>PiccUp</h4></div>
+              <div class="card-tags">
+                <span class="label">
+                  <i class="devicon devicon-react-original colored"></i> React
+                </span>
+              </div>
+              <hr />
+              <div class="card-desc">
+                <p>
+                  A matchmaking lobby that caters to local sports enthusiasts
+                  and helps them organize meet ups. Built to be real-time using
+                  socket.io so that players are always kept up to date with any
+                  new events or messages.
+                </p>
+              </div>
+              <hr />
+              <div class="card-links">
+                <a
+                  href="http://piccup-client.s3-website-us-west-1.amazonaws.com/"
+                >
+                  <button class="button" value="Demo" type="button">
+                    <i class="fas fa-mouse-pointer"></i> Demo
+                  </button>
+                </a>
+                <a href="https://github.com/kayqq/PiccUp">
+                  <button class="button" value="Source" type="button">
+                    <i class="fab fa-github" aria-hidden="true"></i> Source
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
 
-	<!-- PROJECTS -->
-	<section id="projects" class="projects">
+          <!-- CARD 3 -->
+          <div class="col-sm-6">
+            <div class="card">
+              <div class="card-thumbnail">
+                <a href="https://phone-shop-frontend.herokuapp.com/">
+                  <img src="img/img2.png" class="thumbnail" />
+                </a>
+              </div>
+              <div class="card-title"><h4>Phone Shop</h4></div>
+              <div class="card-tags">
+                <span class="label">
+                  <i class="devicon devicon-react-original colored"></i> React
+                </span>
+              </div>
+              <hr />
+              <div class="card-desc">
+                <p>
+                  An e-commerce store similar to Amazon/Ebay built with
+                  React-Redux. Customers can filter products by custom search or
+                  by categories while also being able to add items to cart and
+                  checkout
+                </p>
+              </div>
+              <hr />
+              <div class="card-links">
+                <a href="https://phone-shop-frontend.herokuapp.com/">
+                  <button class="button" value="Demo" type="button">
+                    <i class="fas fa-mouse-pointer"></i> Demo
+                  </button>
+                </a>
+                <a href="https://github.com/kayqq/phone-shop">
+                  <button class="button" value="Source" type="button">
+                    <i class="fab fa-github" aria-hidden="true"></i> Source
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-		<!-- Section Title -->
-		<div class="container">
-			<div class="row projects-centered">
-				<h2>Projects</h2>
-			</div>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-6">
-					<div class="card">
-						<div class="card-thumbnail">
-							<a href="https://face-detector-frontend.herokuapp.com/">
-								<img src="img/img1.png" class="thumbnail">
-							</a>
-						</div>
-						<div class="card-title">
-							<h4>Face Detector</h4>
-						</div>
-						<div class="card-tags">
-								<span class="label">
-										<i class="devicon devicon-react-original colored"></i>
-										React
-								</span>
-								<span class="label">
-										<i class="devicon devicon-nodejs-plain colored"></i>
-										Nodejs
-								</span>
-								<span class="label">
-										<i class="devicon-postgresql-plain-wordmark colored"></i>
-										PostgreSQL
-								</span>
-							</div>
-						<hr>
-						<div class="card-desc">
-							<p>A React-Redux Face Detection app that detects human faces on image links using Node Express backend for the API, hosted on Heroku with JSON Web Token Authentication and PostgreSQL database</p>
-						</div>
-						<hr>
-						<div class="card-links">
-							<a href="https://face-detector-frontend.herokuapp.com/">
-								<button class="button" value="Source" type="button">
-									<i class="fas fa-mouse-pointer"></i> Demo
-								</button>
-							</a>
-							<a href="https://github.com/kayqq/face-detector">
-								<button class="button" value="Source" type="button">
-									<i class="fab fa-github" aria-hidden="true"></i> Src Frontend
-								</button>
-							</a>
-							<a href="https://github.com/kayqq/face-detector-api">
-								<button class="button" value="Source" type="button">
-									<i class="fab fa-github" aria-hidden="true"></i> Src Backend
-								</button>
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6">
-					<div class="card">
-						<div class="card-thumbnail">
-							<a href="https://phone-shop-frontend.herokuapp.com/">
-								<img src="img/img2.png" class="thumbnail">
-							</a>
-						</div>
-						<div class="card-title">
-							<h4>Phone Shop</h4>
-						</div>
-						<div class="card-tags">
-								<span class="label">
-										<i class="devicon devicon-react-original colored"></i>
-										React
-								</span>
-							</div>
-						<hr>
-						<div class="card-desc">
-							<p>An e-commerce store similar to Amazon/Ebay built with React-Redux. Customers can filter products by custom search or by categories while also being able to add items to cart and checkout </p>
-						</div>
-						<hr>
-						<div class="card-links">
-							<a href="https://phone-shop-frontend.herokuapp.com/">
-								<button class="button" value="Demo" type="button">
-									<i class="fas fa-mouse-pointer"></i> Demo
-								</button>
-							</a>
-							<a href="https://github.com/kayqq/phone-shop">
-								<button class="button" value="Source" type="button">
-									<i class="fab fa-github" aria-hidden="true"></i> Source
-								</button>
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>	
+    <!-- SKILLS -->
+    <section id="stack" class="stack">
+      <!-- Secton Title -->
+      <div class="container">
+        <div class="row"><h2>Stack</h2></div>
+      </div>
 
-	</section>
+      <!-- Dev Icons -->
+      <div class="container">
+        <div class="row">
+          <div class="stackPadding">
+            <div class="devicon">
+              <i class="devicon-javascript-plain colored"></i>
+              <i class="devicon-react-original-wordmark colored"></i>
+              <i class="devicon-nodejs-plain-wordmark colored"></i>
+              <i class="devicon-postgresql-plain-wordmark colored"></i>
+            </div>
+            <div class="devicon-secondary">
+              <i class="devicon-html5-plain-wordmark colored"></i>
+              <i class="devicon-css3-plain-wordmark colored"></i>
+              <i class="devicon-jquery-plain-wordmark colored"></i>
+              <i class="devicon-bootstrap-plain-wordmark colored"></i>
+              <i class="devicon-php-plain colored"></i>
+              <i class="devicon-java-plain-wordmark colored"></i>
+              <i class="devicon-mysql-plain-wordmark colored"></i>
+              <i class="devicon-git-plain-wordmark colored"></i>
+              <i class="devicon-visualstudio-plain-wordmark colored"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-	<!-- SKILLS -->
-	<section id="stack" class="stack">
+    <!-- Javascript sources -->
 
-		<!-- Secton Title -->
-		<div class="container">
-			<div class="row">
-				<h2>Stack</h2>
-			</div>
-		</div>
-		
-		<!-- Dev Icons -->
-		<div class="container">
-			<div class="row">
-				<div class="stackPadding">
-					<div class="devicon">
-						<i class="devicon-javascript-plain colored"></i>
-						<i class="devicon-react-original-wordmark colored"></i>
-						<i class="devicon-nodejs-plain-wordmark colored"></i>
-						<i class="devicon-postgresql-plain-wordmark colored"></i>
-					</div>
-					<div class="devicon-secondary">
-						<i class="devicon-html5-plain-wordmark colored"></i>
-						<i class="devicon-css3-plain-wordmark colored"></i>
-						<i class="devicon-jquery-plain-wordmark colored"></i>
-						<i class="devicon-bootstrap-plain-wordmark colored"></i>
-						<i class="devicon-php-plain colored"></i>
-						<i class="devicon-java-plain-wordmark colored"></i>
-						<i class="devicon-mysql-plain-wordmark colored"></i>
-						<i class="devicon-git-plain-wordmark colored"></i>
-						<i class="devicon-visualstudio-plain-wordmark colored"></i>
-					</div>
-					
-				</div>
-			</div>
-		</div>
-	</section>
+    <!-- jQuery/Bootstrap -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+      integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+      crossorigin="anonymous"
+    ></script>
 
-	<!-- Javascript sources -->
+    <!-- Smooth Scrolling -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-	<!-- jQuery/Bootstrap -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <!-- Glyphicons -->
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"
+      integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
+      crossorigin="anonymous"
+    ></script>
 
-	<!-- Smooth Scrolling -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-	<!-- Glyphicons -->
-	<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
-
-	<!-- Local Scripts -->
-	<script type="text/javascript" src="js/scripts.js"></script>
-	
+    <!-- Local Scripts -->
+    <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 
   <footer></footer>
