updated PiccUp stack tags

--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
                 <span class="label">
                   <i class="devicon devicon-react-original colored"></i> React
                 </span>
+                <span class="label">
+                  <i class="devicon devicon-nodejs-plain colored"></i> Nodejs
+                </span>
+                <span class="label">
+                  <i class="devicon-mongodb-plain colored"></i> MongoDB
+                </span>
               </div>
               <hr />
               <div class="card-desc">
