--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                 class="button fit"
                 >Demo <i class="fa fa-external-link" aria-hidden="true"></i
               ></a>
-              <a href="https://youtu.be/s6zR2T9vn2c" class="button fit"
+              <a
+                href="https://face-detector-frontend.herokuapp.com/"
+                class="button fit"
                 >Github <i class="fa fa-github" aria-hidden="true"></i>
               </a>
             </div>
