changed layout to grid, added cryptocharts project

--- a/index.html
+++ b/index.html
@@ -32,6 +32,56 @@
                 <div class="thumbnails">
                     <div class="box">
                         <a
+                            href="http://cryptocharts.kennyquan.com/"
+                            target="_blank"
+                            class="image fit"
+                        >
+                            <img src="images/cryptocharts.png" alt="" />
+                        </a>
+                        <div class="inner">
+                            <h3>Crypto Charts</h3>
+                            <div class="card-tags">
+                                <span class="label">
+                                    <i class="devicon devicon-react-original colored"></i> React
+                                </span>
+                                <span class="label">
+                                    <i class="devicon devicon-html5-plain colored"></i> HTML5
+                                </span>
+                                <span class="label">
+                                    <i class="devicon devicon-javascript-plain colored"></i>
+                                    JavaScript
+                                </span>
+                                <span class="label">
+                                    <i class="devicon devicon-sass-plain colored"></i> SASS
+                                </span>
+                            </div>
+                            <hr />
+                            <p>
+                                Track your favorite crypto currencies. This project uses HighCharts
+                                to animate and display data from the
+                                <a href="https://www.coingecko.com/en/api" target="_blank"
+                                    >CoinGecko API</a
+                                >
+                            </p>
+                            <div class="button-group">
+                                <a
+                                    href="http://cryptocharts.kennyquan.com/"
+                                    target="_blank"
+                                    class="button style2 fit"
+                                    >Demo <i class="fa fa-external-link" aria-hidden="true"></i
+                                ></a>
+                                <a
+                                    href="https://github.com/kayqq/cryptocharts"
+                                    target="_blank"
+                                    class="button style2 fit"
+                                    >View Code <i class="fa fa-github" aria-hidden="true"></i
+                                ></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <a
                             href="http://fortniteboards.kennyquan.com/"
                             target="_blank"
                             class="image fit"
